# rust-bswap

./: .gitignore  Cargo.toml  LICENSE  README.md  search-index.js
bswap/beu16/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/beu24/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/beu32/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/beu40/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/beu48/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/beu56/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/beu64/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/beusize/: fn.decode.html  fn.encode.html  index.html
bswap/leu16/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/leu24/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/leu32/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/leu40/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/leu48/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
bswap/leu56/: fn.decode.html  fn.decode_slice.html  fn.encode.html  fn.encode_slice.html  index.html
src/: lib.rs  tests.rs
(+41 files in other folders)
